--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,13 +11,12 @@
 	</context-param>
 	<context-param>
 		<param-name>recipe</param-name>
-		<param-value>2.6</param-value>
+		<param-value>2.1</param-value>
 	</context-param>
 	<context-param>
 		<param-name>aboutThisRecipe</param-name>
 		<param-value><![CDATA[
-<p>Spring Data JPA, a recent addition to the Spring portfolio, simplifies the development of DAOs. Section 2.6 shows how
-to build a DAO using Spring Data JPA.</p>
+<p>Illustrates two different ways to present a JDBC DataSource to the application.</p>
 		]]></param-value>
 	</context-param>
 	
