--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,9 @@
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>maven-jetty-plugin</artifactId>
+				<configuration>
+					<jettyEnvXml>${chapter.conf.dir}/jetty-env.xml</jettyEnvXml>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
