--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
 		<version>1.0-RELEASE</version>
 	</parent>
 	
-	<artifactId>com.springinpractice.02_01</artifactId>
+	<artifactId>com.springinpractice.02_02</artifactId>
 	<packaging>war</packaging>
 	
-	<name>Spring in Practice Section 2.1</name>
-	<description>Shows how to use Spring's JdbcTemplate for data access.</description>
+	<name>Spring in Practice Section 2.2</name>
+	<description>Shows how to look up a data source using JNDI.</description>
 	<url>http://springinpractice.com/</url>
 	
 	<properties>
