Updated recipe desc

--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
 		<version>1.0-RELEASE</version>
 	</parent>
 	
-	<artifactId>com.springinpractice.02_03</artifactId>
+	<artifactId>com.springinpractice.02_04</artifactId>
 	<packaging>war</packaging>
 	
-	<name>Spring in Practice Section 2.3</name>
-	<description>Shows how to use object/relational mapping for database access.</description>
+	<name>Spring in Practice Section 2.4</name>
+	<description>Shows how to create a data access layer.</description>
 	<url>http://springinpractice.com/</url>
 	
 	<properties>
