--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
 		<version>1.0-RELEASE</version>
 	</parent>
 	
-	<artifactId>com.springinpractice.02_05</artifactId>
+	<artifactId>com.springinpractice.02_06</artifactId>
 	<packaging>war</packaging>
 	
-	<name>Spring in Practice Section 2.5</name>
-	<description>Shows how to use JPA-based persistence.</description>
+	<name>Spring in Practice Section 2.6</name>
+	<description>Shows how to use Spring Data JPA for your data access layer.</description>
 	<url>http://springinpractice.com/</url>
 	
 	<properties>
@@ -48,6 +48,16 @@
 			<version>1.0-RELEASE</version>
 			<type>war</type>
 		</dependency>
+		
+		<!-- Spring Data JPA -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+        </dependency>
 		
 		<!-- Need this to use Hibernate as a JPA persistence provider -->
 		<dependency>
